--- a/style.css
+++ b/style.css
@@ -5,13 +5,30 @@
     text-decoration: none;
 }
 /*Ajuste do body*/
-body {
+#pattern {
     /*cor hexa do background-image: #148a5a*/
-    background-image: url(./assets/wave.png);
+    /*background-image: url(./assets/wave.png);
     background-position: 0% 0%;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover;*/
+    position: absolute;
+    width: 100%;
+    background-color: #3bb78f;
+    background-image: linear-gradient(315deg,
+    #3bb78f 0%, #0bab64 74%);
+    
 }
+#pattern:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 215px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 /*ajuste logo*/
 #cabecalho {
     display: flex;
