--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background-image: url(./assets/wave.png);
     background-position: 50% 0%;
     background-repeat: no-repeat;
-    background-size: 170%;
+    background-size: 145%;
 }
 
 /*ajuste logo*/
@@ -18,7 +18,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 3vh;
+    margin-top: 5vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 #cabecalho .logo {
     height: 5vh;
@@ -44,11 +45,6 @@ body {
     align-items: center;
     margin-top: 3vh;
 }
-#inputButtonP p {
-    text-align: center;
-    width: 40vw;
-    font-size: 12px;
-}
 #inputButtonP .inputBu {
     display: flex;
     justify-content: space-evenly;
@@ -57,8 +53,21 @@ body {
 #inputButtonP .inputBu input{
     height: 5.3vh;
     width: 25vw;
+    border-radius: 2px;
+    border-style: none;
 }
 #inputButtonP .inputBu button{
-    height: 6vh;
+    height: 5.6vh;
     width: 10vw;
+    background-color: black;
+    color: white;
+    border-style: none;
+    border-radius: 2px;
 }
+#inputButtonP p {
+    text-align: center;
+    width: 40vw;
+    font-size: 12px;
+    margin-top: 3vh;
+}
+/*Ajuste da imagem central*/
