--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     width: 43vw;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 #inputButtonP .inputBu input{
     height: 5.3vh;
@@ -71,3 +72,8 @@ body {
     margin-top: 3vh;
 }
 /*Ajuste da imagem central*/
+#img {
+    display: flex;
+    justify-content: center;
+    margin-top: 2vh;
+}
