--- a/style.css
+++ b/style.css
@@ -102,3 +102,15 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 1vh;
 }
+/*Ajuste partners*/
+#partners {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25vh;
+    margin-bottom: 20vh;
+}
+#partners .line {
+    border: 1px solid #bdbdbd;
+    width: 70vw;
+}
