--- a/style.css
+++ b/style.css
@@ -108,9 +108,24 @@ body {
     flex-direction: column;
     align-items: center;
     margin-top: 25vh;
-    margin-bottom: 20vh;
+    margin-bottom: 10vh;
 }
 #partners .line {
     border: 1px solid #bdbdbd;
     width: 70vw;
+}
+/*Ajuste paragraph final*/
+#paragraphFinal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: red;
+    gap: 3vh;
+}
+#paragraphFinal h3 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: lighter;
+    font-size: 20px;
+    width: 38vw;
 }
