--- a/style.css
+++ b/style.css
@@ -95,6 +95,11 @@ body {
     font-size: 40px;
     color: #148a5a;
 }
+#description h3 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+}
 #description p {
     display: flex;
     text-align: left;
@@ -107,7 +112,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 25vh;
+    margin-top: 20vh;
     margin-bottom: 10vh;
 }
 #partners .line {
@@ -120,12 +125,16 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: red;
     gap: 3vh;
+    margin-bottom: 10vh;
 }
 #paragraphFinal h3 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: lighter;
     font-size: 20px;
     width: 38vw;
+}
+#paragraphFinal p {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 12px;
 }
