--- a/style.css
+++ b/style.css
@@ -154,3 +154,35 @@ body {
     border: none;
     border-radius: 5px;
 }
+/*Ajuste faqs*/
+#containerDoubts {
+    display: flex;
+    justify-content: center;
+}
+#doubts {
+    background-color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2vh;
+    margin-bottom: 4vh;
+    width: 80vw;
+    height: 60vh;
+}
+#doubts .faq {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #148a5a;
+    margin-bottom: 3vh;
+}
+#doubts .questions {
+    display: flex;
+    justify-content: space-between;
+    width: 45vw;
+    height: 5vh;
+    border-bottom: 1px solid #bdbdbd;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 550;
+}
