--- a/style.css
+++ b/style.css
@@ -174,7 +174,6 @@ body {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     color: #148a5a;
-    margin-bottom: 3vh;
 }
 #doubts .questions {
     display: flex;
@@ -185,4 +184,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-weight: 550;
+}
+/*Ajuste rodapé*/
+#containerBaseboard {
+    display: flex;
+    justify-content: center;
+}
+#baseboard {
+    color: #148a5a;
+    width: 60vw;
+    display: flex;
+    justify-content: end;
+    gap: 1vw;
 }
